# legalis-mcp

./: .env.example  .gitignore  README.md  README.pt-BR.md  pyproject.toml  smithery.yaml
.github/workflows/: publish.yml
legalis_mcp/: __main__.py  auth.py  client.py  server.py
legalis_mcp/tools/: cases.py  events_tasks.py  interview.py  legal_docs.py  legislation.py  templates.py  usage.py
tests/integration/: test_mcp_server.py
tests/unit/: test_auth.py  test_client.py  test_configure.py  test_tools_cases.py  test_tools_events_tasks.py  test_tools_legal.py  test_tools_misc.py  test_tools_templates.py
